--- a/.github/workflows/yolo-detect.yml
+++ b/.github/workflows/yolo-detect.yml
@@ -34,7 +34,7 @@ jobs:
         cd yolo
         mkdir -pv onnx
         cd onnx
-        wget https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11n.pt -O yolo.pt
+        wget https://github.com/aimaryoyo/model-convert/raw/refs/heads/main/yolo/yolov8n.pt
         python ../export_det_v11.pyc -w yolo.pt --sim
 
     - name: Upload artifact
