--- a/.github/workflows/yolo-seg.yml
+++ b/.github/workflows/yolo-seg.yml
@@ -1,4 +1,4 @@
-name: Convert Yolo Detect Models
+name: Convert Yolo Seg Models
 
 # 触发工作流的事件
 on:
@@ -34,8 +34,8 @@ jobs:
         cd yolo
         mkdir -pv onnx
         cd onnx
-        wget https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11n.pt -O yolo.pt
-        python ../export_det_v11.pyc -w yolo.pt --sim
+        wget https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11n-seg.pt -O yolo.pt
+        python ../export_seg_v11.pyc -w yolo.pt --sim
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
